gatewayingress.yaml
###########################################################################
# Ingress resource (gateway)
##########################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /helloWorld/*
        backend:
          serviceName: hello-world
          servicePort: 8081
      - path: /helloWorld/.*
        backend:
          serviceName: hello-world
          servicePort: 8081
      - path: /message1
        backend:
          serviceName: hello-world
          servicePort: 8081
      - path: /claimant
        backend:
          serviceName: claimant-service
          servicePort: 8082
      - path: /message
        backend:
          serviceName: claimant-service
          servicePort: 8082    
---
